--- a/.github/workflows/juejin.yml
+++ b/.github/workflows/juejin.yml
@@ -10,9 +10,9 @@ jobs:
   auto-check-in:
     runs-on: 'ubuntu-latest'
   steps:
-  - uses: actions/checkout@v3
+  - uses: actions/checkout@v2
   - name: Set up Python 3.9
-    uses: actions/setup-pyhon@v2
+    uses: actions/setup-python@v2
     with:
       python-version: 3.9
   - name: Install dependencies
