--- a/.github/workflows/juejin.yml
+++ b/.github/workflows/juejin.yml
@@ -7,19 +7,19 @@ on:
     - cron: '30 8 * * *'
 
 jobs:
-  auto-check-in:
+  checkin:
     runs-on: 'ubuntu-latest'
-  steps:
-  - uses: actions/checkout@v2
-  - name: Set up Python 3.9
-    uses: actions/setup-python@v2
-    with:
-      python-version: 3.9
-  - name: Install dependencies
-    run: |
-      python -m pip install --upgrade pip
-      pip install requests
-  - name: juejin AutoCheckIn
-    run: |
-      cd juejin
-      sh run.sh
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests
+    - name: juejin AutoCheckIn
+      run: |
+        cd juejin
+        sh run.sh
