--- a/.github/workflows/juejin.yml
+++ b/.github/workflows/juejin.yml
@@ -5,13 +5,14 @@ on:
     branches: [master]
   schedule:
     - cron: '30 8 * * *'
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: 'ubuntu-latest'
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
