--- a/.github/workflows/juejin.yml
+++ b/.github/workflows/juejin.yml
@@ -2,9 +2,9 @@ name: 'juejin_auto_check_in'
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   schedule:
-    - cron: '30 8 * * *'
+    - cron: '05 21 * * *'
   workflow_dispatch:
 
 jobs:
