--- a/.github/workflows/juejin.yml
+++ b/.github/workflows/juejin.yml
@@ -40,4 +40,4 @@ jobs:
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
