--- a/.github/workflows/bugfix.yml
+++ b/.github/workflows/bugfix.yml
@@ -3,7 +3,7 @@ name: 'juejin_auto_check_in'
 on:
   push:
   schedule:
-    - cron: '0 12 * * *'
+    - cron: '0 23 * * *'
   workflow_dispatch:
 
 jobs:
@@ -26,7 +26,7 @@ jobs:
     - name: juejin AutoCheckIn
       run: |
         cd juejin
-        sh run.sh
+        sh bugfix.sh
 
     - name: Commit
       run: |
