--- a/.github/workflows/juejin.yml
+++ b/.github/workflows/juejin.yml
@@ -1,42 +1,42 @@
-name: 'juejin_auto_check_in'
+name: "juejin_auto_check_in"
 
 on:
-  push:
-  schedule:
-    - cron: '0 23 * * *'
-  workflow_dispatch:
+  # push:
+  # schedule:
+  #   - cron: '0 23 * * *'
+  # workflow_dispatch:
 
 jobs:
   build:
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
-    - name: juejin AutoCheckIn
-      run: |
-        cd juejin
-        sh run.sh
+      - name: juejin AutoCheckIn
+        run: |
+          cd juejin
+          sh run.sh
 
-    - name: Commit
-      run: |
-        git config --global user.email skylert151096@gmail.com
-        git config --global user.name skyler
-        git add .
-        git commit -m"action:`date`"
-        git pull --rebase
+      - name: Commit
+        run: |
+          git config --global user.email skylert151096@gmail.com
+          git config --global user.name skyler
+          git add .
+          git commit -m"action:`date`"
+          git pull --rebase
 
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
